--- a/Assignments/Assignment_1/Part_1/index.html
+++ b/Assignments/Assignment_1/Part_1/index.html
@@ -12,6 +12,14 @@
     <title>Assignment 1 - Part 1</title>
 </head>
 <body>
+    <address>
+        <p>
+            <strong>Miss Eileen Dover</strong><br />
+            4321 Cliff Top Edge<br />
+            Dover, CT9 XXX<br />
+            UK
+        </p>
+    </address>
     <h1>Re: Eileen Dover university application</h1>
     <p>Dear Eileen,</p>
     <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your questions one by one, in the following sections.</p>
