Added HTML comments at top of file

--- a/Assignments/Assignment_1/Part_2/index.html
+++ b/Assignments/Assignment_1/Part_2/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index.html
+    Date: 22 May 2024
+    INFT-1206 Assignment 1 Part 2, structuring a page of content.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
