--- a/Class_Notes/HTML/HTML_Tables/index.html
+++ b/Class_Notes/HTML/HTML_Tables/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index.html
+    Date: 27 May 2024
+    In-class lesson for tables following MDN.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
