Added comment and table headers

--- a/Class_Notes/HTML/HTML_Tables/timetable.html
+++ b/Class_Notes/HTML/HTML_Tables/timetable.html
@@ -1,11 +1,36 @@
+<!--
+    Name: Alyssa Williamson
+    File: timetable.html
+    Date: 27 May 2024
+    Recreating school timetable with HTML.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DC Timetable</title>
+    <style>
+        table,
+        th,
+        td{
+            text-align: center;
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
     <h1>My Durham College Summer 2024 Timetable</h1>
+    <table>
+        <tr>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+        </tr>
+    </table>
 </body>
 </html>
