Added all classes w/o formatting

--- a/Class_Notes/HTML/HTML_Tables/timetable.html
+++ b/Class_Notes/HTML/HTML_Tables/timetable.html
@@ -17,19 +17,163 @@
             text-align: center;
             border: 1px solid black;
             border-collapse: collapse;
-            padding: 5px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
+        td{
+            height: 30px;
+            min-width: 150px;
         }
     </style>
 </head>
 <body>
     <h1>My Durham College Summer 2024 Timetable</h1>
     <table>
+        <colgroup>
+            <col style:"border-width: 0"/>
+        </colgroup>
         <tr>
+            <th></th>
             <th>Monday</th>
             <th>Tuesday</th>
             <th>Wednesday</th>
             <th>Thursday</th>
             <th>Friday</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td rowspan="2">
+                MGMT 1224<br>
+                Lec<br>
+                F209
+            </td>
+            <td rowspan="2">
+                COSC 1200<br>
+                Lab<br>
+                C249
+            </td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td rowspan="2">
+                INFT 1206<br>
+                Lab<br>
+                C316
+            </td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td rowspan="2">
+                COSC 1200<br>
+                Lec<br>
+                C316
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td rowspan="2">
+                COSC 1200<br>
+                Lec<br>
+                C307
+            </td>
+            <td rowspan="2">
+                INFT 1206<br>
+                Lec<br>
+                C249
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td rowspan="2">
+                INFT 1207<br>
+                Lab<br>
+                C250
+            </td>
+            <td rowspan="2">
+                MGMT 1223<br>
+                Lec<br>
+                F209
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                MGMT 1223<br>
+                Lab C249
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td rowspan="2">
+                INFT 1207<br>
+                Lec<br>
+                C320
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
 </body>
