Added colours and other formatting

--- a/Class_Notes/HTML/HTML_Tables/timetable.html
+++ b/Class_Notes/HTML/HTML_Tables/timetable.html
@@ -15,10 +15,13 @@
         th,
         td{
             text-align: center;
-            border: 1px solid black;
+            border: 1px solid #e0e0e0;
             border-collapse: collapse;
             padding-top: 5px;
             padding-bottom: 5px;
+        }
+        th{
+            background-color: #e0e0e0;
         }
         td{
             height: 30px;
@@ -29,9 +32,6 @@
 <body>
     <h1>My Durham College Summer 2024 Timetable</h1>
     <table>
-        <colgroup>
-            <col style:"border-width: 0"/>
-        </colgroup>
         <tr>
             <th></th>
             <th>Monday</th>
@@ -67,12 +67,12 @@
         <tr>
             <td></td>
             <td></td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #ffcc80">
                 MGMT 1224<br>
                 Lec<br>
                 F209
             </td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #a5d6a7">
                 COSC 1200<br>
                 Lab<br>
                 C249
@@ -82,7 +82,7 @@
         </tr>
         <tr>
             <td></td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #f48fb1;">
                 INFT 1206<br>
                 Lab<br>
                 C316
@@ -94,7 +94,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #a5d6a7">
                 COSC 1200<br>
                 Lec<br>
                 C316
@@ -104,12 +104,12 @@
         <tr>
             <td></td>
             <td></td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #a5d6a7">
                 COSC 1200<br>
                 Lec<br>
                 C307
             </td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #f48fb1">
                 INFT 1206<br>
                 Lec<br>
                 C249
@@ -126,12 +126,12 @@
             <td></td>
             <td></td>
             <td></td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #80cbc4">
                 INFT 1207<br>
                 Lab<br>
                 C250
             </td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #80deea">
                 MGMT 1223<br>
                 Lec<br>
                 F209
@@ -141,7 +141,7 @@
         <tr>
             <td></td>
             <td></td>
-            <td>
+            <td style="background-color: #80deea">
                 MGMT 1223<br>
                 Lab C249
             </td>
@@ -150,7 +150,7 @@
         <tr>
             <td></td>
             <td></td>
-            <td rowspan="2">
+            <td rowspan="2" style="background-color: #80cbc4">
                 INFT 1207<br>
                 Lec<br>
                 C320
