--- a/Class_Notes/HTML/HTML_Tables/timetable.html
+++ b/Class_Notes/HTML/HTML_Tables/timetable.html
@@ -13,7 +13,11 @@
     <style>
         table tr > td:first-child { 
             border: none;
+            width: 50px;
             text-align: right;
+            vertical-align: top;
+            padding: 0px;
+
         }
         table {
             border-collapse: collapse;
@@ -35,8 +39,11 @@
             border: none;
         }
         td{
-            height: 30px;
-            min-width: 150px;
+            height: 35px;
+            width: 150px;
+        }
+        hr {
+            border-color: red;
         }
     </style>
 </head>
@@ -60,15 +67,7 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+            <td>9 am</td>
             <td></td>
             <td></td>
             <td></td>
@@ -76,7 +75,15 @@
             <td></td>
         </tr>
         <tr>
+            <td>10 am</td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>11 am</td>
             <td></td>
             <td rowspan="2" style="background-color: #ffcc80">
                 MGMT 1224<br>
@@ -92,7 +99,7 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>12 pm</td>
             <td rowspan="2" style="background-color: #f48fb1;">
                 INFT 1206<br>
                 Lab<br>
@@ -102,7 +109,7 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>1 pm</td>
             <td></td>
             <td></td>
             <td rowspan="2" style="background-color: #a5d6a7">
@@ -113,7 +120,7 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>2 pm</td>
             <td></td>
             <td rowspan="2" style="background-color: #a5d6a7">
                 COSC 1200<br>
@@ -128,13 +135,13 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>3 pm</td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>4 pm</td>
             <td></td>
             <td></td>
             <td rowspan="2" style="background-color: #80cbc4">
@@ -150,7 +157,7 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>5 pm</td>
             <td></td>
             <td style="background-color: #80deea">
                 MGMT 1223<br>
@@ -159,7 +166,7 @@
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>6 pm</td>
             <td></td>
             <td rowspan="2" style="background-color: #80cbc4">
                 INFT 1207<br>
@@ -171,15 +178,14 @@
             <td></td>
         </tr>
         <tr>
+            <td>7 pm</td>
             <td></td>
-            <td></td>
-
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>8 pm</td>
             <td></td>
             <td></td>
             <td></td>
