Followed CSS Intro class lecture

--- a/Class_Notes/CSS/CSS_Intro/index.html
+++ b/Class_Notes/CSS/CSS_Intro/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Intro</title>
+    <!--Linking to an External Stylesheet-->
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>CSS Intro</h1>
+    <h1 class="title" id="title">CSS Intro</h1>
+    <div id="parent-container">
+        I am the Parent
+        <div class="child-container">
+            I am the Child
+        </div>
+    </div>
+    <ul>
+        <li id="first-item">
+            First
+        </li>
+        <li id="second-item">
+            Second
+        </li>
+        <li id="third-item">
+            Third
+        </li>
+    </ul>
 </body>
 </html>
