--- a/Assignments/Assignment_2/Part 1/index.html
+++ b/Assignments/Assignment_2/Part 1/index.html
@@ -1,7 +1,7 @@
 <!--
     Name: Alyssa Williamson
     File: index.html
-    Date: 3 June 2024
+    Date: 5 June 2024
     INFT-1206 Assignment 2 Part 1, Mozilla splash page.
 -->
 <!DOCTYPE html>
@@ -107,13 +107,13 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-
+      <img src="./firefox_logo-only_RGB400.png" alt="Firefox logo.">
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
-
+        <iframe width="400" height="250"src="https://www.youtube.com/embed/ojcNcvb1olg" title="Choose Independent - Choose Firefox" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -124,16 +124,30 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
-        </a>
+          <img 
+            srcset="firefox_logo-only_RGB400.png 400w, firefox_logo-only_RGB120.png 120w"
+            sizes="(max-width: 500px) 120px, 400px"
+            src="./firefox_logo-only_RGB400.png"
+            alt="Firefox logo." >
+        </a>  
         <a href="https://www.mozilla.org/">
-          <img>
+          <img
+            srcset="mozilla-dinosaur-head400.png 400w, mozilla-dinosaur-head120.png 120w"
+            sizes="(max-width: 500px) 120px, 400px"
+            src="./mozilla-dinosaur-head400.png"
+            alt="Mozilla dinosaur head logo." >
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img
+            srcset="firefox-addons400.jpg 400w, firefox-addons120.jpg 120w"
+            sizes="(max-width: 500px) 120px, 400px"
+            src="./firefox-addons400.jpg"
+            alt="Firefox logo as puzzle piece design.">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img
+            src="./mdn.svg"
+            alt="Mozilla Developer Network Web Docs logo.">
         </a>
         <div class="clearfix"></div>
       </div>
