--- a/Assignments/Assignment_2/Part 1/index.html
+++ b/Assignments/Assignment_2/Part 1/index.html
@@ -128,14 +128,14 @@
             srcset="firefox_logo-only_RGB400.png 400w, firefox_logo-only_RGB120.png 120w"
             sizes="(max-width: 500px) 120px, 400px"
             src="./firefox_logo-only_RGB400.png"
-            alt="Firefox logo." >
+            alt="Firefox logo.">
         </a>  
         <a href="https://www.mozilla.org/">
           <img
             srcset="mozilla-dinosaur-head400.png 400w, mozilla-dinosaur-head120.png 120w"
             sizes="(max-width: 500px) 120px, 400px"
             src="./mozilla-dinosaur-head400.png"
-            alt="Mozilla dinosaur head logo." >
+            alt="Mozilla dinosaur head logo.">
         </a>
         <a href="https://addons.mozilla.org/">
           <img
@@ -154,6 +154,13 @@
 
       <div class="red-panda">
         <!-- insert picture element -->
+         <picture>
+          <source
+            srcset="red-panda600portrait.jpg 600w" media="(max-width: 600px)">
+          <img
+            src="./red-panda1200.jpg"
+            alt="Red panda sitting in a tree.">
+         </picture>
       </div>
 
     </main>
