--- a/Assignments/Assignment_2/Part 1/index.html
+++ b/Assignments/Assignment_2/Part 1/index.html
@@ -113,7 +113,7 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
-        <iframe width="400" height="250"src="https://www.youtube.com/embed/ojcNcvb1olg" title="Choose Independent - Choose Firefox" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="400" height="250" src="https://www.youtube.com/embed/ojcNcvb1olg" title="Choose Independent - Choose Firefox" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -156,7 +156,7 @@
         <!-- insert picture element -->
          <picture>
           <source
-            srcset="red-panda600portrait.jpg 600w" media="(max-width: 600px)">
+            srcset="red-panda600portrait.jpg" media="(max-width: 600px)">
           <img
             src="./red-panda1200.jpg"
             alt="Red panda sitting in a tree.">
