--- a/Assignments/Assignment_2/Part 2/index.html
+++ b/Assignments/Assignment_2/Part 2/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index.html
+    Date: 12 June 2024
+    INFT-1206 Assignment 2 Part 2, Structuring planet data.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
