Changed folder names for Part 1 and Part 2

--- a/Assignments/Assignment_2/Part_2/index.html
+++ b/Assignments/Assignment_2/Part_2/index.html
@@ -13,7 +13,7 @@
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Table template</h1>
+    <h1>Our Solar System's Planets</h1>
 
 
   </body>
