Added all table headings and caption

--- a/Assignments/Assignment_2/Part_2/index.html
+++ b/Assignments/Assignment_2/Part_2/index.html
@@ -15,9 +15,11 @@
   <body>
     <h1>Our Solar System's Planets</h1>
     <table>
+      <caption>
+        Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
+      </caption>
       <tr>
-        <th></th>
-        <th></th>
+        <td colspan="2"></td>
         <th>Name</th>
         <th>Mass (10<sup>24</sup>kg)</th>
         <th>Diameter (km)</th>
@@ -30,23 +32,8 @@
         <th>Notes</th>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <th rowspan="4" colspan="2">Terrestrial planets</th>
+        <th>Mercury</th>
         <td></td>
         <td></td>
         <td></td>
@@ -58,23 +45,7 @@
         <td></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <th>Venus</th>
         <td></td>
         <td></td>
         <td></td>
@@ -86,23 +57,7 @@
         <td></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <th>Earth</th>
         <td></td>
         <td></td>
         <td></td>
@@ -114,23 +69,7 @@
         <td></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <th>Mars</th>
         <td></td>
         <td></td>
         <td></td>
@@ -142,9 +81,59 @@
         <td></td>
       </tr>
       <tr>
+        <th rowspan="4">Jovian planets</th>
+        <th rowspan="2">Gas giants</th>
+        <th>Jupiter</th>
         <td></td>
         <td></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th>Saturn</th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th rowspan="2">Ice giants</th>
+        <th>Uranus</th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th>Neptune</th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th colspan="2">Dwarf planets*</th>
+        <th>Pluto</th>
         <td></td>
         <td></td>
         <td></td>
