Added <colgroup> for border styling

--- a/Assignments/Assignment_2/Part_2/index.html
+++ b/Assignments/Assignment_2/Part_2/index.html
@@ -33,6 +33,10 @@
           <th>Notes</th>
         </tr>
       </thead>
+      <colgroup>
+        <col span="2">
+        <col style="border: 2px solid black;">
+      </colgroup>
       <tbody>
         <tr>
           <th rowspan="4" colspan="2">Terrestrial planets</th>
