First class progress on Microsoft Clone

--- a/Class_Notes/CSS/Microsoft_Clone/index.html
+++ b/Class_Notes/CSS/Microsoft_Clone/index.html
@@ -7,6 +7,37 @@
     <title>Microsoft Clone</title>
 </head>
 <body>
-    <h1>Microsoft Clone</h1>
+    <nav class="nav-bar">
+        <img id="microsoft-logo" src="./images/microsoft-logo.png" alt="">
+        <ul class = left-nav-ul>
+            <li>Microsoft 365</li>
+            <li>Teams</li>
+            <li>Copilot</li>
+            <li>Windows</li>
+            <li>Surface</li>
+        </ul>
+        <ul class="right-nav-ul">
+            <li>All Microsoft</li>
+            <li>Search (Icon)/li>
+            <li>Cart (Icon)</li>
+            <li>Cart (Icon)</li>
+            <li>Surface</li>
+        </ul>
+    </nav>
+    <div class="main-containter">
+        <div class="highlight-container">
+            <span class="new-tag"></span>
+            <h3 class="meet-pro-title"></h3>
+            <p class="surface-description"></p>
+            <button class="pre-order"></button>
+        </div>
+    </div>
+    <div class="options">
+        <div class="surface-devices"></div>
+        <div class="xbox-games"></div>
+        <div class="find-pc"></div>
+        <div class=""></div>
+
+    </div>
 </body>
 </html>
