--- a/Class_Notes/CSS/Microsoft_Clone/index.html
+++ b/Class_Notes/CSS/Microsoft_Clone/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Microsoft Clone</title>
 </head>
 <body>
@@ -18,26 +21,42 @@
         </ul>
         <ul class="right-nav-ul">
             <li>All Microsoft</li>
-            <li>Search (Icon)/li>
-            <li>Cart (Icon)</li>
-            <li>Cart (Icon)</li>
-            <li>Surface</li>
+            <li><i class="fa-solid fa-magnifying-glass"></i></li>
+            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <li><i class="fa-regular fa-user"></i></li>
         </ul>
     </nav>
-    <div class="main-containter">
+    <div class="main-container">
         <div class="highlight-container">
-            <span class="new-tag"></span>
-            <h3 class="meet-pro-title"></h3>
-            <p class="surface-description"></p>
-            <button class="pre-order"></button>
+            <span class="new-tag">New</span>
+            <h1 class="meet-pro-title">Meet Surface Pro</h1>
+            <p class="surface-description">This laptop's unrivaled flexibility
+                and AI features like Recall and Cocreator, enable you to do more
+                than you ever imagined.</p>
+            <button class="pre-order">Pre-order now</button>
         </div>
     </div>
     <div class="options">
-        <div class="surface-devices"></div>
-        <div class="xbox-games"></div>
-        <div class="find-pc"></div>
-        <div class=""></div>
-
-    </div>
+        <div class="surface-devices">
+            <i class="fa-solid fa-laptop"></i>
+            <a href="#">Shop Surface Devices</a>
+        </div>
+        <div class="xbox-games">
+            <i class="fa-brands fa-xbox"></i>
+            <a href="#">Shop Xbox games and consoles</a>
+        </div>
+        <div class="find-pc">
+            <i class="fa-solid fa-desktop"></i>
+            <a href="#">Find your next PC</a>
+        </div>
+        <div class="business-shop">
+            <i class="fa-solid fa-briefcase"></i>
+            <a href="#">Shop for your business</a>
+        </div>
+        <div class="choose-365">
+            <i class="fa-solid fa-briefcase"></i>
+            <a href="#">Choose your Microsoft 365</a>
+        </div>
+    </div>      
 </body>
 </html>
