Added HTML comments

--- a/Assignments/Assignment_3/Part_2/index.html
+++ b/Assignments/Assignment_3/Part_2/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index.html
+    Date: 26 June 2024
+    INFT-1206 Assignment 3 Part 2, A cool-looking box.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
