--- a/Assignments/Assignment_3/Part_2/index.html
+++ b/Assignments/Assignment_3/Part_2/index.html
@@ -9,8 +9,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="./style.css">
     <title>Cool box</title>
-    
   </head>
   <body>
       <div>This is a cool box</div>
