--- a/Assignments/Assignment_3/Part_1/index.html
+++ b/Assignments/Assignment_3/Part_1/index.html
@@ -54,7 +54,7 @@
   </head>
 
   <body>
-    <h1>Jane Doe</h1>
+    <h1>Alyssa Williamson</h1>
     <div class="job-title">Web Developer</div>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
@@ -73,7 +73,7 @@
     <ul>
       <li>
         Email:
-        <a href="mailto:jane@example.com">jane@example.com</a>
+        <a href="mailto:alyssa@example.com">alyssa@example.com</a>
       </li>
       <li>
         Web:
