--- a/Assignments/Assignment_4/Part_1/index.html
+++ b/Assignments/Assignment_4/Part_1/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index.html
+    Date: 09 August 2024
+    INFT-1206 Assignment 4 Part 1, Silly story generator.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
