--- a/Assignments/Assignment_4/Part_2/index.html
+++ b/Assignments/Assignment_4/Part_2/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index.html
+    Date: 09 August 2024
+    INFT-1206 Assignment 4 Part 2, Image gallery.
+-->
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
