Added HTML header comment

--- a/Assignments/Assignment_4/Part_4/index-finished.html
+++ b/Assignments/Assignment_4/Part_4/index-finished.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Alyssa Williamson
+    File: index-finished.html
+    Date: 09 August 2024
+    INFT-1206 Assignment 4 Part 4, Adding features to Bouncing balls demo.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
